# nbNMF

./: .gitignore  LICENSE  README.md  initialization.py  nbNMF.py  setup.cfg  setup.py  test.py
nbNMF/: __init__.py  nbNMF.py
src/: __init__.py  nbNMF.py
tests/: test_nmf.py
