[metadata]
name = nbNMF
version = 0.0.1
author = Pedro Sebe
author_email = pedro.bioinfo@gmail.com
description = nbNMF is an easy-to-use Python library for robust dimensionality reduction with count data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PedroSebe/nbNMF
project_urls =
    Bug Tracker = https://github.com/PedroSebe/nbNMF/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src